src/capi_saw_2021.f90


type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ga") ::&
capi_30 = capi_saw_type(&
["g","a","l","l","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["G","a",c_null_char," "," "," "," "," "," "], &
Ga%z, &
Ga%saw_min, &
Ga%saw_max, &
Ga%saw, &
Ga%saw_u, &
Ga%asaw, &
Ga%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ge") ::&
capi_31 = capi_saw_type(&
["g","e","r","m","a","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["G","e",c_null_char," "," "," "," "," "," "], &
Ge%z, &
Ge%saw_min, &
Ge%saw_max, &
Ge%saw, &
Ge%saw_u, &
Ge%asaw, &
Ge%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_As") ::&
capi_32 = capi_saw_type(&
["a","r","s","e","n","i","c",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","s",c_null_char," "," "," "," "," "," "], &
As%z, &
As%saw_min, &
As%saw_max, &
As%saw, &
As%saw_u, &
As%asaw, &
As%saw_u, &
["r",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Se") ::&
capi_33 = capi_saw_type(&
["s","e","l","e","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","e",c_null_char," "," "," "," "," "," "], &
Se%z, &
Se%saw_min, &
Se%saw_max, &
Se%saw, &
Se%saw_u, &
Se%asaw, &
Se%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Br") ::&
capi_34 = capi_saw_type(&
["b","r","o","m","i","n","e",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","r",c_null_char," "," "," "," "," "," "], &
Br%z, &
Br%saw_min, &
Br%saw_max, &
Br%saw, &
Br%saw_u, &
Br%asaw, &
Br%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Kr") ::&
capi_35 = capi_saw_type(&
["k","r","y","p","t","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["K","r",c_null_char," "," "," "," "," "," "], &
Kr%z, &
Kr%saw_min, &
Kr%saw_max, &
Kr%saw, &
Kr%saw_u, &
Kr%asaw, &
Kr%saw_u, &
["g"," ","m",c_null_char," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Rb") ::&
capi_36 = capi_saw_type(&
["r","u","b","i","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","b",c_null_char," "," "," "," "," "," "], &
Rb%z, &
Rb%saw_min, &
Rb%saw_max, &
Rb%saw, &
Rb%saw_u, &
Rb%asaw, &
Rb%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Sr") ::&
capi_37 = capi_saw_type(&
["s","t","r","o","n","t","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","r",c_null_char," "," "," "," "," "," "], &
Sr%z, &
Sr%saw_min, &
Sr%saw_max, &
Sr%saw, &
Sr%saw_u, &
Sr%asaw, &
Sr%saw_u, &
["g"," ","r",c_null_char," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Y") ::&
capi_38 = capi_saw_type(&
["y","t","t","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Y",c_null_char," "," "," "," "," "," "," "], &
Y%z, &
Y%saw_min, &
Y%saw_max, &
Y%saw, &
Y%saw_u, &
Y%asaw, &
Y%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Zr") ::&
capi_39 = capi_saw_type(&
["z","i","r","c","o","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Z","r",c_null_char," "," "," "," "," "," "], &
Zr%z, &
Zr%saw_min, &
Zr%saw_max, &
Zr%saw, &
Zr%saw_u, &
Zr%asaw, &
Zr%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Nb") ::&
capi_40 = capi_saw_type(&
["n","o","b","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","b",c_null_char," "," "," "," "," "," "], &
Nb%z, &
Nb%saw_min, &
Nb%saw_max, &
Nb%saw, &
Nb%saw_u, &
Nb%asaw, &
Nb%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Mo") ::&
capi_41 = capi_saw_type(&
["m","o","l","y","b","d","e","n","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","o",c_null_char," "," "," "," "," "," "], &
Mo%z, &
Mo%saw_min, &
Mo%saw_max, &
Mo%saw, &
Mo%saw_u, &
Mo%asaw, &
Mo%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Tc") ::&
capi_42 = capi_saw_type(&
["t","e","c","h","n","e","t","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","c",c_null_char," "," "," "," "," "," "], &
Tc%z, &
Tc%saw_min, &
Tc%saw_max, &
Tc%saw, &
Tc%saw_u, &
Tc%asaw, &
Tc%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ru") ::&
capi_43 = capi_saw_type(&
["r","u","t","h","e","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","u",c_null_char," "," "," "," "," "," "], &
Ru%z, &
Ru%saw_min, &
Ru%saw_max, &
Ru%saw, &
Ru%saw_u, &
Ru%asaw, &
Ru%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Rh") ::&
capi_44 = capi_saw_type(&
["r","h","o","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","h",c_null_char," "," "," "," "," "," "], &
Rh%z, &
Rh%saw_min, &
Rh%saw_max, &
Rh%saw, &
Rh%saw_u, &
Rh%asaw, &
Rh%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Pd") ::&
capi_45 = capi_saw_type(&
["p","a","l","l","a","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","d",c_null_char," "," "," "," "," "," "], &
Pd%z, &
Pd%saw_min, &
Pd%saw_max, &
Pd%saw, &
Pd%saw_u, &
Pd%asaw, &
Pd%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ag") ::&
capi_46 = capi_saw_type(&
["s","i","l","v","e","r",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","g",c_null_char," "," "," "," "," "," "], &
Ag%z, &
Ag%saw_min, &
Ag%saw_max, &
Ag%saw, &
Ag%saw_u, &
Ag%asaw, &
Ag%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Cd") ::&
capi_47 = capi_saw_type(&
["c","a","d","m","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","d",c_null_char," "," "," "," "," "," "], &
Cd%z, &
Cd%saw_min, &
Cd%saw_max, &
Cd%saw, &
Cd%saw_u, &
Cd%asaw, &
Cd%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_In") ::&
capi_48 = capi_saw_type(&
["i","n","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["I","n",c_null_char," "," "," "," "," "," "], &
In%z, &
In%saw_min, &
In%saw_max, &
In%saw, &
In%saw_u, &
In%asaw, &
In%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Sn") ::&
capi_49 = capi_saw_type(&
["t","i","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","n",c_null_char," "," "," "," "," "," "], &
Sn%z, &
Sn%saw_min, &
Sn%saw_max, &
Sn%saw, &
Sn%saw_u, &
Sn%asaw, &
Sn%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Sb") ::&
capi_50 = capi_saw_type(&
["a","n","t","i","m","o","n","y",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","b",c_null_char," "," "," "," "," "," "], &
Sb%z, &
Sb%saw_min, &
Sb%saw_max, &
Sb%saw, &
Sb%saw_u, &
Sb%asaw, &
Sb%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Te") ::&
capi_51 = capi_saw_type(&
["t","e","l","l","u","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","e",c_null_char," "," "," "," "," "," "], &
Te%z, &
Te%saw_min, &
Te%saw_max, &
Te%saw, &
Te%saw_u, &
Te%asaw, &
Te%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_I") ::&
capi_52 = capi_saw_type(&
["i","o","d","i","n","e",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["I",c_null_char," "," "," "," "," "," "," "], &
I%z, &
I%saw_min, &
I%saw_max, &
I%saw, &
I%saw_u, &
I%asaw, &
I%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Xe") ::&
capi_53 = capi_saw_type(&
["x","e","n","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["X","e",c_null_char," "," "," "," "," "," "], &
Xe%z, &
Xe%saw_min, &
Xe%saw_max, &
Xe%saw, &
Xe%saw_u, &
Xe%asaw, &
Xe%saw_u, &
["g"," ","m",c_null_char," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Cs") ::&
capi_54 = capi_saw_type(&
["c","a","e","s","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","s",c_null_char," "," "," "," "," "," "], &
Cs%z, &
Cs%saw_min, &
Cs%saw_max, &
Cs%saw, &
Cs%saw_u, &
Cs%asaw, &
Cs%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ba") ::&
capi_55 = capi_saw_type(&
["b","a","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","a",c_null_char," "," "," "," "," "," "], &
Ba%z, &
Ba%saw_min, &
Ba%saw_max, &
Ba%saw, &
Ba%saw_u, &
Ba%asaw, &
Ba%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_La") ::&
capi_56 = capi_saw_type(&
["l","a","n","t","h","a","n","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","a",c_null_char," "," "," "," "," "," "], &
La%z, &
La%saw_min, &
La%saw_max, &
La%saw, &
La%saw_u, &
La%asaw, &
La%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ce") ::&
capi_57 = capi_saw_type(&
["c","e","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","e",c_null_char," "," "," "," "," "," "], &
Ce%z, &
Ce%saw_min, &
Ce%saw_max, &
Ce%saw, &
Ce%saw_u, &
Ce%asaw, &
Ce%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Pr") ::&
capi_58 = capi_saw_type(&
["p","r","a","s","e","o","d","y","m","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","r",c_null_char," "," "," "," "," "," "], &
Pr%z, &
Pr%saw_min, &
Pr%saw_max, &
Pr%saw, &
Pr%saw_u, &
Pr%asaw, &
Pr%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Nd") ::&
capi_59 = capi_saw_type(&
["n","e","o","d","y","m","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","d",c_null_char," "," "," "," "," "," "], &
Nd%z, &
Nd%saw_min, &
Nd%saw_max, &
Nd%saw, &
Nd%saw_u, &
Nd%asaw, &
Nd%saw_u, &
["g",c_null_char," "," "," "," "," "," "," "])
